<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#f7f7f7">

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical" 
        android:background="@drawable/raw">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:background="@drawable/raw" >

            <ImageView
                android:id="@+id/id_myself"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
               
                android:src="@drawable/contacts" />

            <TextView
                android:id="@+id/maself"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/id_myself"
                android:text="我"
                android:textColor="#393854"
                android:textSize="18sp" />

            <Button
                android:id="@+id/bt_myself"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="#00000000" />

        </RelativeLayout> 
	</LinearLayout>
	
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       	android:layout_marginTop="20dp"
        android:background="@drawable/raw"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/raw" >

            <ImageView
                android:id="@+id/id_contacts"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/people" />

            <TextView
                android:id="@+id/contacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@id/id_contacts"
                android:text="@string/contacts"
                android:textColor="#393854"
                android:textSize="18sp" />

            <Button
                android:id="@+id/bt_contacts"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignBottom="@+id/id_contacts"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="#00000000" />
        </RelativeLayout>
     </LinearLayout>
        
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       	android:layout_marginTop="5dp"
        android:background="@drawable/raw"
        android:orientation="vertical" >
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/raw" >

            <ImageView
                android:id="@+id/id_messages"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/messages" />

            <TextView
                android:id="@+id/messages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@id/id_messages"
                android:text="@string/messages"
                android:textColor="#393854"
                android:textSize="18sp" />

            <Button
                android:id="@+id/bt_messages"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignBottom="@+id/id_messages"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="#00000000" />
        </RelativeLayout>
     </LinearLayout>
     
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       	android:layout_marginTop="20dp"
        android:background="@drawable/raw"
        android:orientation="vertical" >   
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/raw" >

          <ImageView
                android:id="@+id/id_set"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/setting" />


           <TextView
                android:id="@+id/set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@id/id_set"
                android:text="@string/setting"
                android:textColor="#393854"
                android:textSize="18sp" />

            <Button
                android:id="@+id/bt_set"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignBottom="@+id/id_set"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="#00000000" />
        </RelativeLayout>
    </LinearLayout>
    
     
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       	android:layout_marginTop="5dp"
        android:background="@drawable/raw"
        android:orientation="vertical" >   
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/raw" >

          <ImageView
                android:id="@+id/id_about"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/about" />


           <TextView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@id/id_about"
                android:text="@string/about"
                android:textColor="#393854"
                android:textSize="18sp" />

            <Button
                android:id="@+id/bt_about"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignBottom="@+id/id_about"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="#00000000" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
